practica Data Binding

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,16 +2,16 @@
     <string name="app_name">AboutMe</string>
     <string name="name">Jose Manuel Soto Quintana</string>
     <string name="yellow_star">Yellos Star</string>
-    <string name="bio">Hi, my name is José Manuel.
-\n\nViva el rock.
-\n\nYo soy un perro negro y callejero
-\nSin hogar, sin hembra y sin dinero
-\n\nA nadie le importa mi porvenir
-\nEs por eso que tengo que sufrir
-\nTengo que rodar y rodar y rodar y rodar
-\n\nNo tengo conciencia ni tengo hogar
-\n\n\Yo soy un perro negro y callejero
-\nYo soy un perro negro y callejero\n\n</string>
+    <string name="bio">My name is José Manuel.
+\n\nHe oído que la noche
+\n\nEs toda magia
+\nY que un duende te invita a soñar
+\n\nY sé que, últimamente
+\nApenas he parado
+\nY tengo la impresión de divagar
+\n\nAmanece tan pronto
+\n\n\Y yo estoy tan solo
+\nY no me arrepiento de lo de ayer, sí\n\n</string>
     <string name="what_is_your_nickname">What is your Nickname?</string>
     <string name="done">Done</string>
 </resources>
